@@ -26,6 +26,7 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.SyncFailedException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -165,7 +166,11 @@ public class Database {
 		fos.close();
 		
 		// Force data to disk before continuing
-		fos.getFD().sync();
+		try {
+			fos.getFD().sync();
+		} catch (SyncFailedException e) {
+			// Ignore if fsync fails. We tried.
+		}
 		
 		File orig = new File(filename);
 		orig.delete();
