@@ -1,3 +1,6 @@
+KeePassdroid (1.8.6.3)
+  * Fix db saving issue
+  
 KeePassdroid (1.8.6.2)
   * Add Chinese translations
   
